Change default install location to likely new location

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [WOW ADDON UPDATER]
-WoW Addon Location = c:\Program Files (x86)\World of Warcraft\Interface\AddOns
+WoW Addon Location = C:\Program Files (x86)\World of Warcraft\_retail_\Interface\AddOns
 Addon List File = in.txt
 Installed Versions File = installed.txt
 Close Automatically When Completed = False
