--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,4 @@
 [WOW ADDON UPDATER]
 WoW Addon Location = C:\Program Files (x86)\World of Warcraft\_retail_\Interface\AddOns
-Addon List File = in.txt
-Installed Versions File = installed.txt
-Close Automatically When Completed = False
+Addon List File = addons.txt
+Installed Versions File = installed.ini
