--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
-branches:
-  only:
-  - master
+if: (type = push AND branch IN (master, dev)) OR (type = pull_request AND NOT branch =~ /no-ci/)
 
 git:
   quiet: true
-  depth: 3
 
 language: python
 python:
