--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [WOW ADDON UPDATER]
-WoW Addon Location = C:\Program Files (x86)\World of Warcraft\_retail_\Interface\AddOns
+WoW Addon Location = D:\Wow\Addons\test
 Addon List File = addons.txt
 Installed Versions File = installed.ini
