Add a bunch of my configs and testing files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-# Addon input file
+# Addon input files
 addons.txt
 installed.ini
+addons-classic.txt
+addons-retail.txt
+addons-test.txt
+config-classic.ini
+config-retail.ini
+config-test.ini
+installed-classic.ini
+installed-test.ini
 
 # Settings for IntelliJ
 .idea/
