--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: python
 python:
   - '3.7'
 install:
-  - 'pip install pipenv'
-  - 'pipenv install --dev'
+  - 'pip install poetry'
+  - 'poetry install'
 script:
-  'pipenv run python -m unittest'
+  'poetry run python -m unittest'
