--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [WOW ADDON UPDATER]
-WoW Addon Location = C:\Program Files (x86)\World of Warcraft\_retail_\Interface\AddOns
-Addon List File = addons.txt
+WoW Addon Location = ./addons
+Addon List File = in.txt
 Installed Versions File = installed.ini
 # retail or classic
 Game Version = retail
