--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
-if: (type = push AND branch IN (master, dev)) OR (type = pull_request AND NOT branch =~ /no-ci/)
+if: (type = push AND branch IN (master, develop)) OR (type = pull_request AND NOT branch =~ /no-ci/)
 
 git:
   quiet: true
 
 language: python
 python:
-  - '3.7'
+  - '3.8'
 install:
   - 'pip install pipenv'
   - 'pipenv install --dev'
 script:
-  'pipenv run python -m unittest'
+  'pipenv run python -m unittest -v'
