--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [WOW ADDON UPDATER]
-WoW Addon Location = s:\World of Warcraft\_classic_\Interface\AddOns\
+WoW Addon Location = C:\Program Files (x86)\World of Warcraft\_retail_\Interface\AddOns
 Addon List File = addons.txt
 Installed Versions File = installed.ini
 # retail or classic
-Game Version = tbc
+Game Version = retail
