--- a/config.ini
+++ b/config.ini
@@ -2,5 +2,5 @@
 WoW Addon Location = C:\Program Files (x86)\World of Warcraft\_retail_\Interface\AddOns
 Addon List File = addons.txt
 Installed Versions File = installed.ini
-# retail,classic or tbc
+# retail, classic, tbc, or wrath
 Game Version = retail
