Add support for GitHub personal access tokens

--- a/config.ini
+++ b/config.ini
@@ -4,3 +4,8 @@ Addon List File = addons.txt
 Installed Versions File = installed.ini
 # retail,classic or tbc
 Game Version = retail
+
+# Optional personal access token for github
+#[GitHub]
+#username = username_here
+#token = token_here
